infra/test_kata_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-kata-fc
  namespace: default
spec:
  runtimeClassName: kata-qemu
  containers:
    - name: test
      image: image.midea.com/midea-middleware/busybox@sha256:455a9a6e082bacf9c02c39ab21a795d4cb05d7398fe34d0a6da23fed18a6a5f6
      command: ["sh", "-c", "uname -r && sleep 3600"]
  restartPolicy: Never
